# ESP32-homekit-garage-opener

./: .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  readme.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
.github/workflows/: build.yml  release.yml
docs/: GarageOpenerBottom.stl  GarageOpenerBottomButton.stl  GarageOpenerCompleteNotPrintable.stl  GarageOpenerTop.stl
docs/superpowers/plans/: 2026-06-28-cicd-and-self-updating-ota.md  2026-06-28-esp-idf-v5.5-modernization.md
docs/superpowers/specs/: 2026-06-28-cicd-and-self-updating-ota-design.md  2026-06-28-esp-idf-v5.5-modernization-design.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  board.h  dht_sensor.c  dht_sensor.h  door_control.c  door_control.h  hap_garage.c  hap_garage.h  idf_component.yml  io.h  ota_update.c  ota_update.h
